# xogame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  prepare.sh  vcpkg.json  xo.py
include/: game.hpp  gameIA.hpp  gameMath.hpp
src/: game.cpp  gameIA.cpp
